<resources>
    <string name="app_name">FoodIsHot</string>
    <string-array name="languages">
        <item>English</item>
        <item>Kiswahili</item>
    </string-array>
    <string name="hint">"Enter your phone number"</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="create_account">Create your account</string>
    <string name="sign_up">Sign Up</string>
    <string name="sReturn">RETURN</string>
    <string name="GO">GO</string>
    <string name="suEmail">Email</string>
    <string name="suName">Full Name</string>
    <string name="suPassword">Password</string>
    <string name="suNumber">Phone Number</string>
    <string name="language">English</string>
    <string name="selectLang">SELECT YOUR LANGUAGE</string>
    <string name="alreadyExists">Phone Number already registered, Please try another number or go back to the login page</string>
    <string name="sValidEmail">Please enter a valid email address</string>
    <string name="sValidPhone">Please enter a valid phone number</string>
    <string name="sValidPass">Password should contain more than 8 characters and at least one small letter</string>
    <string name="scEnterCodePt1">Enter the code sent to </string>
    <string name="mDonthaveAccount">Don\'t have an Account?</string>
    <string name="scResend">RESEND CODE</string>
    <string name="scTimer">Resend SMS in </string>
    <string name="scIncorrectNumber">Phone number registered is incorrect please enter a correct phone number</string>
    <string name="noConnectionToast">Please check your connection and try again</string>
    <string name="scOk">OK</string>
    <string name="scMaxRequest">Max number of request has reached please check if number entered is correct</string>
    <string name="sAgreeTermsPt1">By clicking \"Sign Up\" you acknowledge that you have read the </string>
    <string name="sAgreeTermsPt2"> and agree to the </string>
    <string name="delivering_to">Delivering to</string>
    <string name="search_restaurants">Search restaurants</string>
    <string name="sign_out">Sign out</string>
    <string name="WAlocation_required">Location required for better service please turn on location</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="get_curr_location">Get current location</string>
    <string name="address_label">Address label</string>
    <string name="home_address_label">Home</string>
    <string name="work_address_label">Work</string>
    <string name="other_address_label">Other</string>
    <string name="save">SAVE</string>
    <string name="address_title_actionBar">Address details</string>
    <string name="LAincorect_address">Incorrect address</string>
    <string name="permission_denied">permission denied</string>
    <string name="Hmout_of_reach">We cannot reach you</string>
    <string name="HmOut_of_reach_msg">Sorry we are currently not in your area</string>
    <string name="change_language">Change Language</string>
    <string name="restaurants">Restaurants</string>
    <string name="orders">Orders</string>
    <string name="account">Account</string>
    <string name="minutes_set_hm">mins</string>
    <string name="hours_set_hm">hrs</string>
    <string name="sort_by">Sort By</string>
    <string name="lower_price_first">Lower price first</string>
    <string name="higher_price_first">Higher price first</string>
    <string name="string_filter_distance">Distance</string>
    <string name="currently_no_pending_orders">CURRENTLY NO PENDING ORDERS</string>
    <string name="no_orders_yet">NO ORDERS YET</string>
    <string name="previous_orders">PREVIOUS ORDERS</string>
    <string name="pending_orders">PENDING ORDERS</string>
    <string name="add_to_order">Add to order ·</string>
    <string name="specification">Specification</string>
    <string name="add_specification_e_g_no_cheese">Add specification (e.g. no cheese)</string>
    <string name="required">*required</string>
    <string name="unavailable_restaurant">Restaurant is currently unavailable</string>
    <string name="no_restaurants_available">No Restaurants Available</string>
    <string name="no_restaurants_available_details">Sorry there are currently no restaurants for the specified category</string>
    <string name="getDeliveryLocation">Please select the location to deliver to</string>
    <string name="getDeliveryLocationDetails">Select your delivery location at the top where written \"Get current location\" to see restaurants available near you</string>
</resources>
