<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >
<ImageView
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:src="@drawable/logoimglight"/>
        <TextView
            android:id="@+id/tv_welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible"
            android:text="@string/create_account"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_24"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:paddingBottom="@dimen/padding_x"
        android:paddingTop="@dimen/padding_2x"
>
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_3x"
            android:inputType="textPersonName"
            android:hint="@string/suName" />
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_3x"
                android:inputType="textEmailAddress"
                android:hint="@string/suEmail" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_3x"
                android:inputType="textPassword"
                android:hint="@string/suPassword" />
        <EditText
            android:id="@+id/mPhoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_3x"
            android:fontFamily="sans-serif"
            android:inputType="phone"
            android:hint="@string/suNumber" />

        <Button
            android:id="@+id/mRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:clickable="false"
            android:enabled="false"
            android:layout_margin="@dimen/margin_3x"
            android:text="@string/sign_up"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        ><TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/privacy_with_terms"
        android:textAlignment="center"
        /></LinearLayout>
</RelativeLayout>