<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity"
    android:background="@android:color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_above="@id/bottom_nav_home">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ProgressBar
                android:id="@+id/progressBar_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/refresh_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_refresh_black_24dp"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/act_account_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/act_account_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"

            android:orientation="vertical"
            >
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/searhBarColor"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_language"
                android:textColor="@android:color/black"
                android:padding="10dp"
                android:textSize="20dp"
                />
            <com.lucasurbas.listitemview.ListItemView
                android:id="@+id/set_sw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:liv_title="Swahili"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:liv_multiline="false"
                />  <com.lucasurbas.listitemview.ListItemView
            android:id="@+id/set_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:liv_title="English"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:liv_multiline="false"
            />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/searhBarColor"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_address_label"
                android:textColor="@android:color/black"
                android:textSize="20dp"
                android:padding="10dp"
                />
            <com.lucasurbas.listitemview.ListItemView
                android:id="@+id/sign_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:liv_title="@string/sign_out"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:liv_multiline="false"
                app:liv_displayMode="standard"
               />
        </LinearLayout>


    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        app:menu="@menu/bottom_nav"/>
</RelativeLayout>