<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddToCart">
    <View android:layout_width="fill_parent" android:id="@+id/focus_view" android:layout_height="0dp" android:focusable="true" android:focusableInTouchMode="true"><requestFocus/></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
       >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.9">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
               >
                <ImageView
                    android:id="@+id/atc_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    android:padding="15dp"
                    />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">
                <TextView
                    android:id="@+id/atc_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:paddingTop="30dp"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:id="@+id/atc_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:paddingTop="15dp"
                    />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/atc_recyclerview"
            android:overScrollMode="never"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/searchBarBorder"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/atc_instructions_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/specification"
                android:textColor="@android:color/black"
                />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:paddingVertical= "20dp"
            android:textSize="13dp"
            android:hint="@string/add_specification_e_g_no_cheese"
            android:theme="@style/MyEditTextTheme"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
          android:padding="30dp">
            <TextView
                android:id="@+id/atc_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/red_border"
                android:text="-"
                android:textSize="30dp"
                android:textColor="@color/searchBarBorder"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/atc_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textSize="30dp"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/black"
                android:padding="20dp"/>
            <TextView
                android:id="@+id/atc_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/red_border"
                android:text="+"
                android:textSize="30dp"
                android:textColor="@android:color/black"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                />
        </LinearLayout>
            </LinearLayout>
        </LinearLayout>
            </LinearLayout>
        </ScrollView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1">

            <Button
                android:id="@+id/atc_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/effects_redbtn"
                android:enabled="true"
                android:text="@string/add_to_order"/>
            </LinearLayout>
        </LinearLayout>
</RelativeLayout>